...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5a-Qk-oho">
                                                <rect key="frame" x="0.0" y="0.0" width="81.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DD/MM/YYYY" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Iuj-vo-2XB">
                                                <rect key="frame" x="85.5" y="0.0" width="273.5" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                            </textField>
                                        </subviews>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="68" height="68"/>
                                                        <color key="backgroundColor" red="0.0" green="0.49803921569999998" blue="0.63921568630000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="68" id="HiI-bC-gz7"/>
                                                            <constraint firstAttribute="height" constant="68" id="PY6-Ko-eeb"/>
                                                        </constraints>
                                                        <state key="normal" title="CLEAR">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="didClickClearButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jio-ty-lNW"/>
                                                        </connections>
                                                    </button>
...
                                                        <rect key="frame" x="291" y="0.0" width="68" height="68"/>
                                                        <color key="backgroundColor" red="0.0" green="0.49803921569999998" blue="0.63921568630000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="68" id="Cpu-QM-rh1"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="68" id="cdo-m5-R2t"/>
                                                        </constraints>
                                                        <state key="normal" title="SORT">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="didClickSortButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ij9-ud-UBW"/>
                                                        </connections>
                                                    </button>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="68" height="68"/>
                                                        <color key="backgroundColor" red="0.0" green="0.49803921569999998" blue="0.63921568630000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="68" id="cPT-Vm-gnT"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="68" id="yYp-Fj-LuH"/>
                                                        </constraints>
                                                        <state key="normal" title="PUSH">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="didClickPushButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1hb-Te-VFw"/>
                                                        </connections>
                                                    </button>
...
                                                        <rect key="frame" x="291" y="0.0" width="68" height="68"/>
                                                        <color key="backgroundColor" red="0.0" green="0.49803921569999998" blue="0.63921568630000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="68" id="ZFI-u0-hXe"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="68" id="hnO-1p-Qz6"/>
                                                        </constraints>
                                                        <state key="normal" title="POP">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="didClickPopButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8nE-FQ-e2P"/>
                                                        </connections>
                                                    </button>
...
